--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,39 @@
 anyio==3.5.0
 asgiref==3.5.0
+bcrypt==3.2.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
 cryptography==36.0.1
+ecdsa==0.17.0
 fastapi==0.74.0
 h11==0.13.0
 httptools==0.3.0
 idna==3.3
 Jinja2==3.0.3
 MarkupSafe==2.1.0
+paramiko==2.9.2
+passlib==1.7.4
+pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.0
+pymongo==3.6.0
+PyNaCl==1.5.0
 python-dotenv==0.19.2
+python-jose==3.3.0
+python-multipart==0.0.5
 PyYAML==6.0
 requests==2.27.1
+rsa==4.8
+six==1.16.0
 sniffio==1.2.0
+sshtunnel==0.4.0
 starlette==0.17.1
 typing_extensions==4.1.1
 urllib3==1.26.8
 uvicorn==0.17.5
 uvloop==0.16.0
+virtualenv-clone==0.5.7
 watchgod==0.7
 websockets==10.1
