--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,44 @@
 anyio==3.5.0
 asgiref==3.5.0
 bcrypt==3.2.0
+Brotli==1.0.9
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
 cryptography==36.0.1
+dash==2.2.0
+dash-bootstrap-components==1.0.3
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 ecdsa==0.17.0
 fastapi==0.74.0
+Flask==2.0.3
+Flask-Compress==1.11
 h11==0.13.0
 httptools==0.3.0
 idna==3.3
+itsdangerous==2.1.0
 Jinja2==3.0.3
+lxml==4.8.0
 MarkupSafe==2.1.0
-paramiko==2.9.2
+numpy==1.22.2
+pandas==1.4.1
+pandas-datareader==0.10.0
+paramiko==2.10.3
 passlib==1.7.4
+plotly==5.6.0
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.0
 pymongo==3.6.0
 PyNaCl==1.5.0
+python-dateutil==2.8.2
 python-dotenv==0.19.2
 python-jose==3.3.0
 python-multipart==0.0.5
+pytz==2021.3
 PyYAML==6.0
 requests==2.27.1
 rsa==4.8
@@ -30,6 +46,7 @@ six==1.16.0
 sniffio==1.2.0
 sshtunnel==0.4.0
 starlette==0.17.1
+tenacity==8.0.1
 typing_extensions==4.1.1
 urllib3==1.26.8
 uvicorn==0.17.5
@@ -37,3 +54,4 @@ uvloop==0.16.0
 virtualenv-clone==0.5.7
 watchgod==0.7
 websockets==10.1
+Werkzeug==2.0.3
